--- a/Activity/app/src/main/AndroidManifest.xml
+++ b/Activity/app/src/main/AndroidManifest.xml
@@ -5,8 +5,9 @@
     <uses-feature
         android:name="android.hardware.camera"
         android:required="false" />
-    <uses-permission
-        android:name="android.permission.CAMERA"/>
+
+    <uses-permission android:name="android.permission.CAMERA" />
+
     <application
         android:allowBackup="true"
         android:dataExtractionRules="@xml/data_extraction_rules"
@@ -17,20 +18,29 @@
         android:supportsRtl="true"
         android:theme="@style/Theme.MyApplication"
         tools:targetApi="31">
-        <activity android:name=".SecondActivity"
-            android:launchMode="singleInstancePerTask"
-            android:exported="false">
+        <service
+            android:name=".Services.DownloadService"
+            android:enabled="true"
+            android:exported="true"></service>
+
+        <activity
+            android:name=".Activities.SecondActivity"
+            android:exported="false"
+            android:launchMode="singleInstancePerTask">
             <intent-filter>
                 <action android:name="android.intent.action.SEND" />
+
                 <category android:name="android.intent.category.DEFAULT" />
-                <data android:mimeType="text/plain"/>
+
+                <data android:mimeType="text/plain" />
             </intent-filter>
         </activity>
         <activity
-            android:name=".MainActivity"
+            android:name=".Activities.MainActivity"
             android:exported="true">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
+
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
